# Lume

./: .env.example  .gitignore  README.md  lume_cahier_des_charges.md  manage.py  myapp_specifications.md  package-lock.json  package.json  pyproject.toml  start-djngo.sh
InkFuse/: apps.py  urls.py  utils.py  views.py
blueprint/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
blueprint/migrations/: 0001_initial.py
blueprint/templatetags/: slugify_extras.py
echoes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
echoes/migrations/: 0001_initial.py  0002_comment_is_deleted_comment_likes_comment_parent.py
inkwell/: admin.py  forms.py  models.py  urls.py  views.py
inkwell/migrations/: 0001_initial.py  0002_article_views.py  0003_article_hidden.py
lume/: asgi.py  settings.py  urls.py  wsgi.py
persona/: admin.py  allauth_adapter.py  apps.py  forms.py  models.py  signals.py  urls.py
persona/migrations/: 0001_initial.py
persona/views/: goodbye.py  landing.py  login.py  logout.py  peopleList.py  profile.py  register.py
pulse/: admin.py  models.py  urls.py  views.py
pulse/migrations/: 0001_initial.py
static/: output.css
templates/: 404.html  landing.html  toast.html
templates/account/: base.html  login.html  logout.html  people.html  profile.html  profile_edit.html  signup.html
templates/blueprint/: details.html  list.html  preview.html
templates/inkwell/: article_detail.html  article_form.html  article_list.html  article_trash.html  my_article.html
templates/pulse/: following_feed.html  trending_feed.html
(+7 files in other folders)
